--- a/src/scss/modules/header.scss
+++ b/src/scss/modules/header.scss
@@ -14,6 +14,7 @@
     width: 100%;
     font-size: 0;
     margin-bottom: 16px;
+    position: relative;
     
     &:last-child {
         margin-bottom: 0;
@@ -35,11 +36,13 @@
 }
 
 .header-row__menu {
-    display: inline-block;    
-    height: 100%;
     width: 74%;
-    font-size: 16px;    
-    vertical-align: 50%;
+    font-size: 16px;
+    position: absolute;
+    top: 50%;
+    left: 64%;
+    transform: translate(-50%, -64%);
+    z-index: 100;  
 }
 
 .nav {
